--- a/arch/arm64/boot/dts/allwinner/sun50i-a64-oceanic-5inmfd.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-a64-oceanic-5inmfd.dts
@@ -30,6 +30,12 @@
 		default-brightness-level = <8>;
 		enable-gpios = <&pio 7 10 GPIO_ACTIVE_HIGH>; /* LCD-BL-EN: PH10 */
 	};
+
+	can_osc: can-osc {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <8000000>;
+	};
 };
 
 &ehci0 {
@@ -124,6 +130,20 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&r_pwm_pin>;
 	status = "okay";
+};
+
+&spi0 {
+	status = "okay";
+
+	can@0 {
+		compatible = "microchip,mcp2515";
+		reg = <0>;
+		spi-max-frequency = <10000000>;
+		interrupt-parent = <&pio>;
+		interrupts = <0 7 IRQ_TYPE_EDGE_FALLING>;
+		irq-gpios = <&pio 0 7 GPIO_ACTIVE_HIGH>;	/* INT_CAN0: PA7 */
+		clocks = <&can_osc>;
+	};
 };
 
 &uart0 {
